# claw-command-deck

./: .env.example  README.md  TAURI_SETUP.md  index.html  package.json  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AppNav.tsx  ChatPanel.tsx
src/components/agents/: AgentThoughtStream.tsx
src/components/dashboard/: AgentDetailDrawer.tsx  AgentFlowChart.tsx  AgentNode.tsx  CodexApiUsage.tsx  CodexUsageTracker.tsx  CommandPrompt.tsx  CompletedTasks.tsx  ExecutionFeed.tsx  QuickSettings.tsx  SwarmEventLog.tsx  SwarmNode.tsx  SystemVitals.tsx  UsageBar.tsx
src/components/gateway/: AuthDialog.tsx  GatewayStatusCard.tsx  PairingDialog.tsx
src/components/settings/: SettingControl.tsx  SettingsSection.tsx
src/components/setup/: ConfigCenter.tsx  HealthCheckList.tsx  HealthScoreRing.tsx  RepairFlow.tsx
src/data/: agentThoughtTypes.ts  chatTypes.ts  codexUsageTypes.ts  mockCodexUsage.ts  mockData.ts  mockSkills.ts  settingsConfig.ts  types.ts
src/hooks/: useCodexUsage.ts  useGatewayConnection.ts  useMissionControl.ts  useOpenClawConfig.ts  useOpenClawSetup.ts  useSettingsStore.ts
src/integration/: AGENT_MANUAL.md  MissionControlBus.ts  index.ts
src/pages/: Agents.tsx  Dashboard.tsx  SettingsPage.tsx  SetupPage.tsx  Skills.tsx  Tasks.tsx
src/services/desktop/: gateway-commands.ts  index.ts  system-info.ts
src/services/openclaw/: auth.ts  config-manager.ts  config.ts  (+6 more)
(+4 files in other folders)
