[package]
name = "mission-control"
version = "1.0.0"
description = "Nexxen Solutions Mission Control — OpenClaw Gateway Client"
authors = ["Nexxen Solutions"]
edition = "2021"

[lib]
name = "mission_control_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
